...
            buttons(for: .ai, only: [.maskProfanity, .removeHearingImpaired, .fixPunctuation])
            Divider()
            buttons(for: .ai, only: [.acceptChange, .rejectChange, .acceptAllChanges, .rejectAllChanges])
            Divider()
            buttons(for: .ai, only: [.cancelAITask])
        }
        CommandMenu("Playback") {
            buttons(for: .playback, only: [.togglePlay, .shuttleBackward, .pause, .shuttleForward])
            Divider()
            buttons(for: .playback, only: [.stepBackward, .stepForward, .goToStart, .goToEnd])
            Divider()
            buttons(for: .playback, only: [.previousShotChange, .nextShotChange])
            Divider()
...
